# feed.me

./: .git-blame-ignore-revs  .gitignore  .prettierrc.toml  CLAUDE.md  CODE_REVIEW.md  COMPLEX_CATEGORISATION.md  PROJECT_REVIEW.md  README.md  config.toml  dist-workspace.toml  justfile  spacefeeder.toml  spacefeeder_export.opml  test_config.toml
.github/workflows/: publish.yml
content/: all.md  loved.md  search.md
data/: categorization.toml  feeds.toml  tags.toml
spacefeeder/: Cargo.toml
spacefeeder/src/: categorization.rs  config.rs  defaults.rs  lib.rs  main.rs  search.rs  test_tags.rs
spacefeeder/src/categorization/: engine.rs  matching.rs  mod.rs  rules.rs  tests.rs  types.rs
spacefeeder/src/commands/: add_feed.rs  analyze_feeds.rs  build.rs  build_categories.rs  export_feeds.rs  feeds.rs  fetch_feeds.rs  find_feed.rs  get_feed_info.rs  import_feeds.rs  init.rs  mod.rs  search.rs  serve.rs
spacefeeder/src/commands/fetch_feeds/: fetcher.rs  mod.rs  processor.rs  search_indexer.rs  text_utils.rs  types.rs
spacefeeder/src/config/: core.rs  defaults.rs  global.rs  loader.rs  merge.rs  methods.rs  mod.rs  save.rs  tests.rs  types.rs
spacefeeder/src/test_data/: atlassian.xml  xeiaso.rss  youtube.xml
static/css/: styles.css
static/js/: article-manager.js  categories.js  search.js
templates/: all.html  base.html  categories.html  index.html  loved.html  search.html
templates/partials/: article.html
tools/: analyze_feed.py  analyze_tags.py
