[package]
name = "spacefeeder"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/wonderfulspam/feed.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
feed-rs = "2.1.0"
opml = "1.1.6"
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml_edit = { version = "0.22.22", features = ["serde"] }
ureq = "2.10.1"
url = "2.5.2"

[dev-dependencies]
tempfile = "3.8.1"
test-case = "3.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
