[package]
name = "spacefeeder"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/wonderfulspam/feed.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
feed-rs = "2.3"
opml = "1.1"
rayon = "1.11"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25"
tera = "1.20"
toml_edit = { version = "0.23", features = ["serde"] }
ureq = "3.1"
url = "2.5"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.15"
test-case = "3.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
